# custom-diagram-boilerplate

./: .gitignore  .parcelrc  Dockerfile  README.md  custom.d.ts  docker-compose.yml  package-lock.json  package.json  parcelResolver.js  pyproject.toml  static-build.js  tsconfig.json
.github/: dependabot.yml
clearcalcs/: reset.css  start.ts
clearcalcs/interactive/: index.html  start.ts
clearcalcs/interactive/test/: test.ts
clearcalcs/test/: test.html
clearcalcs/utils/: OutParams.ts  timeoutFunctionCall.ts
docs/: README.md  _coverpage.md  _sidebar.md  global-capabilities.md  interactive-diagram-best-practices.md  interactive-diagram-core.md  interactive-diagram-rendering.md  interactive-diagram-test-runner.md  interactive-diagram-user-interaction.md  package-lock.json  quick-start-version-control.md  static-diagram-core.md  static-diagram-rendering.md  static-diagram-test-runner.md  test.html  using-in-clearcalcs.md
examples/toggle-panels/interactive/: index.html  interface.ts  main.html
src/: index.html  interface.ts  main.html  main.scss  main.ts
src/interactive/: interface.ts  main.html  render.ts
src/shared/: ParamsInterface.ts
src/static/: interface.ts  main.html  render.ts
svgdomPatches/: textUtils.js
svgdomPatches/scripts/: compileFont.js
svgdomPatches/scripts/fonts/: OpenSans-Regular.json
test/: index.js  package.json  sandbox.js  test.js
test/__tests__/: index.test.js
test/__tests__/__snapshots__/: index.test.js.snap
