[tool.poetry]
name = "Custom Diagram Weasyprint"
version = "0.1.0"
description = "Print Custom Diagram using Weasyprint"
authors = []

[tool.poetry.dependencies]
python = "^3.12"
weasyprint = "63.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
